cluster/core/flux-system/webhook/github/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: flux-webhook-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: cluster-ingress-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - flux-webhook.${ROOT_DOMAIN}
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - flux-webhook.${ROOT_DOMAIN}
      tls:
        credentialName: mcf-io-origin-ca-cert
        mode: SIMPLE
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
