cluster/core/flux-system/webhook/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  ingressClassName: nginx
  rules:
    - host: &host flux-webhook.${ROOT_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
            path: /hook/
            pathType: Prefix
  tls:
    - hosts:
        - *host
